--- a/src/css/style.css
+++ b/src/css/style.css
@@ -461,7 +461,8 @@ ul {
 }
 ul.order li {
   border-bottom: 1px solid #000;
-  padding: 2rem 0;
+  align-self: center;
+  padding: 1rem 0;
   align-self: center;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -477,13 +478,13 @@ ul.order li {
           align-items: center;
 }
 ul.order li:hover button {
-  display: inline;
+  display: block;
 }
 ul.order li button {
   border: 0;
   display: none;
   line-height: 1;
-  padding: 0;
+  padding: 2px;
 }
 ul.order li.total {
   font-weight: 600;
@@ -593,7 +594,7 @@ ul.order li span.count span {
 .menu-fish img {
   float: right;
   width: 150px;
-  margin-right: 1rem;
+  margin-left: 1rem;
 }
 button,
 input[type=submit] {
@@ -908,12 +909,18 @@ blockquote {
 .order-image {
   float: right;
   padding: 0.5rem;
-  margin-top: -1.5rem;
-  align-content: center;
-  height: 8rem;
-  width: 8rem;
+  height: 4rem;
+  width: 4rem;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   position: initial;
   border-radius: 100rem;
-  
+}
 
+.deleteOrderButtom {
+  float: left;
+  padding: 1rem;
+  border: 0;
+  margin: 2rem;
 }
